; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_usrmarshal.c_get_type_alignment.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_usrmarshal.c_get_type_alignment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VT_BYREF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @get_type_alignment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_type_alignment(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @get_type_size(i32* %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @VT_BYREF, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 3, i32* %3, align 4
  br label %26

15:                                               ; preds = %2
  %16 = load i32, i32* %6, align 4
  %17 = icmp eq i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %26

19:                                               ; preds = %15
  %20 = load i32, i32* %6, align 4
  %21 = icmp ule i32 %20, 4
  br i1 %21, label %22, label %25

22:                                               ; preds = %19
  %23 = load i32, i32* %6, align 4
  %24 = sub i32 %23, 1
  store i32 %24, i32* %3, align 4
  br label %26

25:                                               ; preds = %19
  store i32 7, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %22, %18, %14
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @get_type_size(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
